--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="id_title">Id:</string>
+    <string name="pack_title">Pack:</string>
+    <string name="price_title">Price:</string>
+    <string name="active_title">Active:</string>
 </resources>
